cabal-version: 3.0
name: ormolu-live
version: 0.0.0.0
maintainer: Alexander Esgen <alexander.esgen@tweag.io>
author: Alexander Esgen <alexander.esgen@tweag.io>

common common
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wunused-packages
    -Wredundant-constraints
    -Wno-name-shadowing

library
  import: common
  hs-source-dirs: src
  exposed-modules: App
  build-depends:
    Cabal-syntax,
    base,
    containers,
    deepseq,
    generic-lens,
    ghc-lib-parser,
    lens,
    miso,
    ormolu,
    text,
    unliftio,

executable ormolu-live
  import: common
  main-is: Main.hs
  c-sources: cbits/init.c
  hs-source-dirs: app
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=hs_start"

  build-depends:
    base,
    jsaddle-wasm,
    ormolu-live,

  if !arch(wasm32)
    buildable: False
