cabal-version: 3.0
name: ormolu-live
version: 0.0.0.0
maintainer: Alexander Esgen <alexander.esgen@tweag.io>
author: Alexander Esgen <alexander.esgen@tweag.io>
extra-source-files: .commitrev

common common
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wunused-packages
    -Wredundant-constraints
    -Wno-name-shadowing

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Ormolu.Live
    Ormolu.Live.AceEditor
    Ormolu.Live.CommitRev
    Ormolu.Live.JSUtil

  build-depends:
    Cabal-syntax,
    base,
    containers,
    deepseq,
    file-embed,
    generic-lens,
    ghc-lib-parser,
    jsaddle,
    lens,
    lucid,
    miso,
    ormolu,
    text,
    unliftio,

executable ormolu-live
  import: common
  main-is: Main.hs
  c-sources: cbits/init.c
  hs-source-dirs: app
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=hs_start"

  build-depends:
    base,
    jsaddle-wasm,
    ormolu-live,

  if !arch(wasm32)
    buildable: False

executable prerender
  import: common
  main-is: Prerender.hs
  hs-source-dirs: app
  build-depends:
    base,
    ormolu-live,
